--- a/public/skins/blues/css/layout.css
+++ b/public/skins/blues/css/layout.css
@@ -2,7 +2,7 @@
 
 body {
     font-size: 10px;
-    background:url(../images/body.jpg) repeat-x;
+	
 }
 
 * {
@@ -30,7 +30,7 @@ h1
 {
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size:30px;
-	color: #C00;
+	color:#C00;
 	text-transform:uppercase;
 }
 
@@ -40,33 +40,72 @@ h1
 #pageWrapper {
     width:960px;
     margin:10px auto 10px; auto;
-    padding:5px;
+    padding:0px;
     -moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-    border:#749BCE 1px solid;
+    border:#749BCE opx solid;
     background: #fff;
 
 }
 
 
 
-#header {
-    height:60px;
+.header {
+    height:90px;
 	width:930px;
-	background-color: #D6D6D6;
-	padding:5px 15px 5px 15px;
-
-	-moz-border-top-right-radius: 5px;
-	-moz-border-top-left-radius: 5px;
-	-webkit-border-top-right-radius: 5px;
-	-webkit-border-top-left-radius: 5px;
+	
+	padding:5px 10px 5px 10px;
+	-moz-border-top-right-radius: 7px;
+	-moz-border-top-left-radius: 7px;
+	-webkit-border-top-right-radius: 7px;
+	-webkit-border-top-left-radius: 7px;
+	color:#069;
+	margin-bottom:14px;
+	
+	background: #000000;
+	background: -moz-linear-gradient(top, #000000 0%, #2A3F55 100%), url(img.png) no-repeat 50% 300px;
+	background: -webkit-gradient(linear, 0% 0%,0% 100%, from(#000000), to(#2A3F55)), url(img.png) no-repeat 50% 300px;
+	background: -webkit-linear-gradient(top, #000000 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+	background: -o-linear-gradient(top, #000000 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+	background: -ms-linear-gradient(top, #1e5799 0%,#2A3F55100%), url(img.png) no-repeat 50% 300px;
+	background: linear-gradient(top, #1e5799 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
 
 }
+
+.header h1
+{
+	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size:38px;
+	color:#C00;
+	text-transform:uppercase;
+}
+
+.header a
+{
+
+	color: #6D6D6D;
+	
+}
+
+.header a:hover
+{
+
+	color: #C1C1C1;
+	
+}
+
+
+.headerleft
+{
+	width:299px;
+	float:left
+}
+
 
 
 #logo
 {
-	color: #036;
+	color: #EBEBEB;
 	font-family:Tahoma, Geneva, sans-serif;
 	float:left;
 	width: auto;
@@ -83,7 +122,7 @@ h1
 			background:url(../../../images/cart.gif) no-repeat 18 0;
 			font-weight:700;
 			font-size:12px;
-                        height: 30px;
+                       height:35px;
 
 			}
 
@@ -93,12 +132,12 @@ h1
 			font-size:16px;
 			color:#585858;
 
-			padding:0 0 10px 33px;
+			padding:0 0 1px 33px;
 			}
 			.sideCart dd strong{
 				color:#c91d00;
 				font-size:12px;
-            height:30;
+            height: auto;
 				}
 
 
@@ -106,7 +145,7 @@ h1
 
 #sidebar {
 
-    width:240px;
+    width:260px;
     height: auto;
     padding:2px;
     background-color:#fff;
@@ -117,8 +156,15 @@ h1
 }
 
 .nav {
-		background:#041b33;
-		width:201px;
+		background: #000000;
+		background: -moz-linear-gradient(right, #2A3F55 0%, #2A3F55 100%), url(img.png) no-repeat 50% 300px;
+		background: -webkit-gradient(right, 0% 0%,0% 100%, from(#2A3F55), to(#2A3F55)), url(img.png) no-repeat 50% 300px;
+		background: -webkit-linear-gradient(right, #2A3F55 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+		background: -o-linear-gradient(right, #2A3F55 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+		background: -ms-linear-gradient(right, #2A3F55 0%,#2A3F55100%), url(img.png) no-repeat 50% 300px;
+		background: linear-gradient(right, #2A3F55 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+	
+		width:209px;
 		padding:10px 20px 10px 21px;
 		margin-top:-20px;
 		}
@@ -145,7 +191,7 @@ h1
 				font-family:Arial, Helvetica, sans-serif;
 				}
 .nav li a:hover {
-				color:#c91d00;
+				color:#808080;
 				}
 
 
@@ -157,11 +203,12 @@ h1
 
 #main {
 	    min-height:200px;
-    margin:2px 2px 0px 0px;
+    margin:6px 2px 6px 0px;
 
-	width:684px;
+	width:674px;
 	padding:10px;
         float:left;
+		background-color: #EBEBEB;
           
 }
 
@@ -173,7 +220,7 @@ h1
 #userForm {
     width:280px;
     height:auto;
-    margin:5px 0px 5px 0px;
+    margin:15px 0px 5px 0px;
 	padding-left:20px;
 	padding-top:10px;
 	padding-right:20px;
@@ -181,7 +228,7 @@ h1
 	font-size:12px;
 	float: right;
 	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	font-weight:700;
+	font-weight:500;
 
 }
 
@@ -199,6 +246,7 @@ h1
 	font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
 
 	text-align:center;
+	float:right;
 }
 
 .searchForm h2
@@ -223,12 +271,40 @@ text-transform:uppercase;
 
 
 
-#footer {
-    clear: both;
-    height: 2.5em;
+#footer{
+	width:940px;
+	height:44px;
+	margin:0 auto;
+	position:relative;
+	clear:both;
+	background: #000000;
+		background: -moz-linear-gradient(bottom, #000000 0%, #2A3F55 100%), url(img.png) no-repeat 50% 300px;
+		background: -webkit-gradient(bottom, 0% 0%,0% 100%, from(#000000), to(#2A3F55)), url(img.png) no-repeat 50% 300px;
+		background: -webkit-linear-gradient(bottom, #000000 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+		background: -o-linear-gradient(bottom, #000000 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+		background: -ms-linear-gradient(bottom, #1e5799 0%,#2A3F55100%), url(img.png) no-repeat 50% 300px;
+		background: linear-gradient(bottom, #1e5799 0%,#2A3F55 100%), url(img.png) no-repeat 50% 300px;
+	
+
+	-moz-border-bottom-left-radius: 7px;
+	-webkit-border-bottom-left-radius: 7px;
+
+}
+#footer p {
     margin: 0;
-    text-align:center;
-    font-style:italic;
+    padding: 13px 20px 15px 20px;
+}
+
+#footer a {
+    color: #FFFFFF;
+}
+
+#legal {
+    float: left;
+}
+
+#links {
+    float: right;
 }
 
 
@@ -236,12 +312,14 @@ text-transform:uppercase;
 
 #advert
 {
-	width:240px;
-	height:200px;
+	width:250px;
+	height:250px;
 	background-image:url(../../../images/round-and-round.jpeg);
 	background-repeat:no-repeat;
 	background-position:center;
 	margin:5px 0;
+	background-color: #181818;
+	color:#FFF;
 
 
 }
@@ -263,7 +341,7 @@ text-transform:uppercase;
 
 .article_details
 {
-	width:330px;
+	width:214px;
 	height:auto;
 	background-color:#FFF;
 	float:left;
@@ -274,20 +352,28 @@ text-transform:uppercase;
 	font-weight:bold;
 	margin:0 2px 3px 0;
 	display:inline;
+	
 }
 
 .article_details h3
 {
-font-size:16px;
+font-size:14px;
 color:#C00;
-background-color:#E5E5E5;
+background-color: #191919;
 padding:5px 0 5px 7px;
-height:35px;
-width:320px;
+height:30px;
+width:197px;
 text-transform:uppercase;
 padding:2px 5px 2px 5px;
-font-weight:700;
+padding:8px;
 }
+.article_details h3 a:hover
+{
+color:#fff;
+
+}
+
+
 
 .article_details a
 {
@@ -297,13 +383,14 @@ float:left;
 padding:0 0 6px 0;
 text-decoration:underline;
 color:#6E6E6E
-
 }
+
+
 
 .article_details_left
 {
 	float:left;
-	width:140px;
+	width:99px;
 	margin:10px 0px 0px 0px;
 	padding:10px 0 4px 8px;
 	border-right:2px solid #E9DBDB;
@@ -314,7 +401,7 @@ color:#6E6E6E
 {
 
 	float: none;
-	width:115px;
+	width:85;
 	border:none;
 	padding-left:20px;
 
@@ -325,7 +412,7 @@ color:#6E6E6E
 .article_details_right
 {
 	float:right;
-	width:160px;
+	width:97px;
 	margin:10px 0 0 0;
 	padding:10px 0 4px 8px;
 }
@@ -334,17 +421,17 @@ color:#6E6E6E
 .article_details span{
 display:block;
 float:left;
-margin:15px 0 10px 0;
+margin:2px 0 2px 0;
 color:#6DB200;
-font-size:18px
+font-size:14px
 }
 
 
 .article_details p{
 float:left;
-width:140px;
-margin:10px 0 0 0;
-padding:10px 0 4px 8px;
+width:77px;
+margin:0px 0 0 0;
+padding:0px 0 4px 8px;
 height: auto;
 }
 
@@ -360,11 +447,13 @@ height: auto;
 }
 
 
+
+
 /** Articles open**/
 
 .article_detail_open
 {
-	width:680px;
+	width:660px;
 	height:auto;
 	background-color:#FFF;
 	float:left;
@@ -380,11 +469,11 @@ height: auto;
 .article_details_open h3
 {
 font-size:18px;
-color: #C00;
-background-color:#E5E5E5;
+color: #6D6D6D; 
+background-color: #191919;
 padding:5px 0 5px 7px;
 height:35px;
-width:673px;
+width:653px;
 text-transform:uppercase;
 padding:8px 5px 2px 5px;
 font-weight:700;
@@ -405,7 +494,7 @@ color:#6E6E6E
 .article_details_left_open
 {
 	float:left;
-	width:280px;
+	width:260px;
 	margin:10px 0px 0px 0px;
 	padding:10px 0 4px 8px;
 	border-right:2px solid #E9DBDB;
@@ -417,7 +506,7 @@ color:#6E6E6E
 	float: none;
 	width:240px;
 	border:none;
-	padding-left:20px;
+	padding-left:5px;
 
 
 }
@@ -426,7 +515,7 @@ color:#6E6E6E
 .article_details_right_open
 {
 	float:right;
-	width:380px;
+	width:350px;
 	margin:0px 0 0 0;
 	padding:0px 0 4px 8px;
 }
@@ -435,15 +524,15 @@ color:#6E6E6E
 .article_details_open span{
 display:block;
 float:left;
-margin:15px 0 10px 0;
+margin:15px 20px 10px 0;
 color:#6DB200;
-font-size:18px
+font-size:14px
 }
 
 
 .article_details_open p{
 float:left;
-width:380px;
+width:350px;
 margin:10px 0 0 0;
 padding:0px 0 4px 8px;
 }
@@ -522,26 +611,7 @@ padding:0px 0 4px 8px;
 
 
 
-/** Menus **/
 
-.menusfield {
-
-    height:auto;
-	width:670px;
-    margin: 0;
-    text-align:center;
-	padding:5px;
-    -moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-    border:#749BCE 1px solid;
-    background: #fff;
-	font-size:12px;
-	font-weight:700;
-}
-.menusdesc
-{
-	color:#036;
-}
 
 
 /** Content **/
@@ -624,10 +694,24 @@ padding:0px 0 4px 8px;
 
 .product_header
 {
-	width:420px;
-	height:40px;
+	width:654px;
+	height:30px;
 	font-family:"Courier New", Courier, monospace;
-	padding:10px 0px 15px 0px;
+	padding:10px 10px 15px 10px;
+	background-color: #191919;
+	margin-top:-20px;
+	-moz-border-top-right-radius: 9px;
+	-moz-border-top-left-radius: 9px;
+	-webkit-border-top-right-radius: 9px;
+	-webkit-border-top-left-radius: 9px;
+	-moz-border-bottom-right-radius: 5px;
+	-moz-border-bottom-left-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-moz-border-radius: 25px 10px / 10px 25px;
+	-moz-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
+    -khtml-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
 }
 .pheading
 {
@@ -636,13 +720,22 @@ padding:0px 0 4px 8px;
 .ppagination
 {
 	float:right;
+	color:#6D6D6D;
 }
+.ppagination a
+{
+	
+	color:#C00;
+}
+
 
 .items{
 float:left;
-margin:5px 20px 0 0;
+margin:5px 10px 0 0;
 display:inline;
-width:435px;
+width:434px;
+background-color:#FFF;
+
 }
 .item{
 float:left;
@@ -659,11 +752,14 @@ display:inline
 font-family:Tahoma;
 font-size:12px;
 color:#595959;
-background-color:#E5E5E5;
+background-color: #191919;
 padding:10px 0 20px 7px;
 height:10px;
 width:200px;
 text-transform:uppercase;
+}
+.item h3 a:hover{
+	color:#FFF;
 }
 
 .item img{
@@ -707,7 +803,7 @@ color:#6E6E6E
 .categories {
 		background:#ECDDCE;
 		padding:5px 5px;
-		width:200px;
+		width:220px;
 		float:right;
 		list-style:none;
 		margin-top:5px;
@@ -740,11 +836,11 @@ color:#6E6E6E
 			  .categories h3{
 				font-family:Tahoma;
 				font-size:13px;
-				color: #2A1F55;
-				background-color:#E5E5E5;
+				color: #CCC;
+				background-color: #333;
 				padding:8px 0 20px 4px;
 				height:10px;
-				width:195px;
+				width:215px;
 				text-transform:uppercase;
 
 					}
@@ -757,7 +853,7 @@ color:#6E6E6E
 
 .product_details
 {
-	width:680px;
+	width:670px;
 	height:auto;
 	background-color:#FFF;
 	float:left;
@@ -775,13 +871,13 @@ color:#6E6E6E
 font-family:Tahoma;
 font-size:18px;
 color:#595959;
-background-color:#E5E5E5;
-padding:10px 0 20px 7px;
+background-color: #191919;
+text-align:center;
 height:35px;
 width:673px;
 text-transform:uppercase;
-padding:2px 5px 2px 5px;
 font-weight:700;
+padding-top:8px;
 }
 .product_details a
 {
@@ -821,6 +917,11 @@ color:#6E6E6E
 	width:320px;
 	margin:10px 0 0 0;
 	padding:10px 0 4px 8px;
+}
+.product_details_right_updateq
+{
+	clear:both;
+	margin:10px 0 10px;
 }
 
 
@@ -872,7 +973,7 @@ padding:10px 0 4px 8px;
 	font-weight:700;
 }
 
-
+/**
 .loginfield fieldset {
 	border:1px dashed #CCC;
 	padding:10px;
@@ -1014,6 +1115,8 @@ padding:10px 0 4px 8px;
 	text-transform:uppercase;
 	font-weight:bold;
 }
+**/
+
 #search
 {
 
@@ -1032,3 +1135,504 @@ font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 font-weight:700;
 }
 
+
+
+
+fieldset {
+	border:1px dashed #CCC;
+	padding:10px;
+}
+legend {
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 90%;
+	letter-spacing: -1px;
+	font-weight: bold;
+	line-height: 1.1;
+	color:#fff;
+	background: #666;
+	border: 1px solid #333;
+	padding: 2px 6px;
+}
+h1 {
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 175%;
+	letter-spacing: -1px;
+	font-weight: normal;
+	line-height: 1.1;
+	color:#333;
+}
+label {
+	width:192px;
+	height:32px;
+	margin-top:3px;
+	margin-right:2px;
+	padding-top:11px;
+	padding-left:6px;
+	background-color:#000000;
+	float:left;
+	display: block;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 115%;
+	letter-spacing: -1px;
+	font-weight: normal;
+	line-height: 1.1;
+	color:#666;
+}
+.form {
+	margin:0;
+	padding:0;
+}
+#container {
+	width:750px;
+	margin:auto;
+	padding:10px;
+}
+#top {
+	width:680px;
+	height:50px;
+}
+#leftSide {
+	width:530px;
+	padding-top:30px;
+	float:left;
+}
+#rightSide {
+	background-color:#fff;
+	width:200px;
+	padding:5px;
+	margin-top:40px;
+	float:right;
+	border:1px solid #CCC;
+	font:normal 12px Arial;
+	color:#666666
+}
+.clear {
+	clear:both;
+}
+.holder {
+	background-color:#fff;
+
+}
+.div_texbox {
+	width:347px;
+	float:right;
+	background-color:#E6E6E6;
+	height:35px;
+	margin-top:3px;
+	padding-top:5px;
+	padding-bottom:3px;
+	padding-left:5px;
+}
+
+.textbox {
+	background-image: url(images/16t.png);
+	background-repeat: no-repeat;
+	background-position:left;
+	width:285px;
+	font:normal 18px Arial;
+	color: #999999;
+	padding:3px 5px 3px 19px;
+}
+.textbox:focus, .textbox:hover {
+	background-color:#F0FFE6;
+}
+
+.username {
+    	background-image: url(images/16m.png);
+    	background-repeat: no-repeat;
+    	background-position:left;
+	width:285px;
+    	font:normal 18px Arial;
+    	color: #999999;
+    	padding:3px 5px 3px 19px;
+}
+.username:focus, .username:hover {
+	background-color:#F0FFE6;
+}
+   
+.password {
+    	background-image: url(images/16s.png);
+    	background-repeat: no-repeat;
+   	background-position:left;
+	width:285px;
+    	font:normal 18px Arial;
+    	color: #999999;
+    	padding:3px 5px 3px 19px;
+}
+.password:focus, .password:hover {
+	background-color:#F0FFE6;
+}
+
+.button_div {
+	width:287px;
+	float:right;
+	background-color:#fff;
+	border:1px solid #ccc;
+	text-align:right;
+	height:35px;
+	margin-top:3px;
+	padding:5px 32px 3px;
+}
+.buttons {
+	background: #e3e3db;
+	font-size:12px; 
+	color: #989070; 
+	padding: 6px 14px;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #fff #d8d8d0 #d8d8d0 #fff;
+	text-decoration: none;
+	text-transform:uppercase;
+	font-weight:bold;
+}
+
+
+
+
+
+/*------------ admin --------------- */
+
+/** Menus **/
+
+.menusfield {
+
+    height:auto;
+	width:670px;
+    margin: 0;
+    text-align:center;
+	padding:5px;
+    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+    border:#749BCE 1px solid;
+    background: #fff;
+	font-size:12px;
+	font-weight:700;
+}
+
+
+.menusfieldname
+{
+	width:200px;
+	height: auto;
+	background-color: #AA9FAA;
+	float:left;
+	padding:5px;
+	clear:left;
+	margin:2px;
+}
+.menusfieldname h2
+{
+	font-size:20px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+
+.menusfieldactions
+{
+	width:440px;
+	height: auto;
+	background-color: #9FB3BD;
+	float:right;
+	padding:5px;
+	margin:2px;
+	font-size:12px
+}
+.menusfieldactions h2
+{
+	font-size:18px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+.menusfieldactions a
+{
+	
+	color:#000;
+}
+.menusfieldactions a:hover
+{
+	
+	color:#fff;
+}
+.menusfieldactionsspan
+{
+	width: auto;
+	border-right:1px;
+	border-right-color:#2A1F00;
+	background-color:;
+	float:left;
+	padding:px;
+	margin-left:25px;
+	}
+
+.menusfieldcreate
+{
+	clear:both;
+	width:657px;
+	height:auto;
+	background-color: #D6D6D6;
+	padding:5px;
+	margin-top:6px;
+	margin-left:2px;
+}
+
+.menusfieldh2       
+{
+	margin:10px 10px 10px;
+	font-size:18px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
+
+.menusdesc
+{
+	color:#036;
+}
+
+
+/** Page Admin **/
+
+.pageadminfield {
+
+    height:auto;
+	width:670px;
+    margin: 0;
+    text-align:center;
+	padding:5px;
+    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+    border:#749BCE 1px solid;
+    background: #fff;
+	font-size:12px;
+	font-weight:700;
+}
+
+
+.pageadminfieldname
+{
+	width:480px;
+	height: auto;
+	background-color: #AA9FAA;
+	float:left;
+	padding:5px;
+	clear:left;
+	margin:2px;
+}
+.pageadminfieldname h2
+{
+	font-size:20px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+
+.pageadminfieldactions
+{
+	width:160px;
+	height: auto;
+	background-color: #9FB3BD;
+	float:right;
+	padding:5px;
+	margin:2px;
+	font-size:12px
+}
+.pageadminfieldactions h2
+{
+	font-size:18px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+.pageadminfieldactions a
+{
+	
+	color:#000;
+}
+.pageadminfieldactions a:hover
+{
+	
+	color:#fff;
+}
+.pageadminfieldactionsspan
+{
+	width: auto;
+	border-right:1px;
+	border-right-color:#2A1F00;
+	background-color:;
+	float:left;
+	padding:px;
+	margin-left:25px;
+	}
+
+.pageadminfieldcreate
+{
+	clear:both;
+	width:657px;
+	height:auto;
+	background-color: #D6D6D6;
+	padding:5px;
+	margin-top:6px;
+	margin-left:2px;
+}
+
+.pageadminfieldh2       
+{
+	margin:10px 10px 10px;
+	font-size:18px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
+
+.pageadmindesc
+{
+	color:#036;
+}
+
+
+
+
+/** User List **/
+
+#userlistcontainer
+{
+	width:670px;
+}
+.userlistfield {
+
+    height:auto;
+	width:670px;
+    margin: 0;
+    text-align:center;
+	padding:5px;
+    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+    border:#749BCE 1px solid;
+    background: #fff;
+	font-size:12px;
+	font-weight:700;
+}
+
+
+.userlistfieldname
+{
+	width:120px;
+	height: auto;
+	background-color: #D4BFAA;
+	float: right;
+	padding:5px;
+	clear:left;
+	margin:2px;
+	clear:both;
+}
+.userlistfieldname h2
+{
+	font-size:20px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+
+.userlistfieldfirstname
+{
+	width:110px;
+	height: auto;
+	background-color: #AA9FAA;
+	float: right;
+	padding:5px;
+	clear:left;
+	margin:2px;
+}
+.userlistfieldfirstname h2
+{
+	font-size:20px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+
+.userlistfieldlastname
+{
+	width:110px;
+	height: auto;
+	background-color: #AA9FAA;
+	float: right;
+	padding:5px;
+	clear:left;
+	margin:2px;
+}
+.userlistfieldlastname h2
+{
+	font-size:20px;f	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+
+.userlistfieldrole
+{
+	width:120px;
+	height: auto;
+	background-color: #CCF;
+	float: right;
+	padding:5px;
+	clear:left;
+	margin:2px;
+}
+.userlistfieldrole h2
+{
+	font-size:20px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+
+.userlistfieldactions
+{
+	width:140px;
+	height: auto;
+	background-color: #9FB3BD;
+	float: left;
+	padding:5px;
+	margin:2px;
+	font-size:12px
+}
+.userlistfieldactions h2
+{
+	font-size:18px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#FFF;
+}
+.userlistfieldactions a
+{
+	
+	color:#000;
+}
+.userlistfieldactions a:hover
+{
+	
+	color:#fff;
+}
+.userlistfieldactionsspan
+{
+	width: auto;
+	border-right:1px;
+	border-right-color:#2A1F00;
+	background-color:;
+	float:left;
+	padding:px;
+	margin-left:25px;
+	}
+
+.userlistfieldcreate
+{
+	clear:both;
+	width:657px;
+	height:auto;
+	background-color: #D6D6D6;
+	padding:5px;
+	margin-top:6px;
+	margin-left:2px;
+}
+
+.userlistfieldh2       
+{
+	margin:10px 10px 10px;
+	font-size:18px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;	
+}
+
+
+.userlistdesc
+{
+	color:#036;
+}
