and acl resource 'procuct' error fix

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -4,6 +4,7 @@
 echo $this->doctype('XHTML1_STRICT');
 
 $auth = Zend_Auth::getInstance();
+$user = null;
 if($auth->hasIdentity())
 {
     $user=$auth->getIdentity();
